enhanced theme, added and reorganised links

--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@
 
     <!-- landing-page-content -->
     <main class="px-3 landing-content">
-      <h1>Your Only College Companion</h1>
-      <p class="lead">
+      <div class="">
+        <h1>Your Only College Companion</h1>
+      </div>
+      <p >
         "Our vision is to provide every student,  
         with easy access to all resources they need through our platform.”
       </p>
-      <p class="lead">
+      <!-- <p class="lead">
         <a href="#footer" class="btn btn-lg btn-light fw-bold border-white bg-white">Contact Us</a>
-      </p>
+      </p> -->
     </main>
 
     <!-- landing-page-bottom -->
@@ -90,29 +92,18 @@
         <div class="container text-center mb-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="">Unit 1 (Coming Soon)</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="">Unit 2 (Coming Soon)</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="">Unit 3 (Coming Soon)</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="">Unit 4 (Coming Soon)</a>
             </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
+          
           </div>
         </div>
       <div>
@@ -122,7 +113,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://mru.org/principles-economics-microeconomics" target="_blank">Open <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://mru.org/principles-economics-microeconomics" target="_blank">Principles of Economics: Microeconomics(MRU) <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -133,7 +124,12 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/pages/calendar/" target="_blank">Open <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/video_galleries/lecture-videos/" target="_blank">Principles of Microeconomics(MIT) <i class="fa-solid fa-link"></i></a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 mb-5">
+              <a class="content-link" href="https://www.youtube.com/playlist?list=PLTjEimbqDkpBL55W6wye1jTcYePjehkT3" target="_blank">Principles of Microeconomics(YouTube) <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -144,7 +140,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://drive.google.com/file/d/1me1lJWhKor-Cb9HJUHkN848vtq9daBK9/view" target="_blank">Open <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://drive.google.com/file/d/1me1lJWhKor-Cb9HJUHkN848vtq9daBK9/view" target="_blank">Principles of MicroEconomics(Mankiw) <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -155,7 +151,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="https://drive.google.com/drive/folders/1On6aTBqfXYDa7ix4XX2StQMKTCoqTouW?usp=share_link">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -174,7 +170,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="https://drive.google.com/file/d/1yRMQRBa3kHaZgy4oTdZwMentWRrGvNvj/view?usp=share_link">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -185,33 +181,20 @@
         <div class="container text-center mb-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="">Unit 1 (Coming Soon)</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="">Unit 2 (Coming Soon)</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="">Unit 3 (Coming Soon)</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="">Unit 4 (Coming Soon)</a>
             </div>
           </div>
         </div>
       <div>
-
       <div>
         <h3>Short Course</h3>
         <div class="container text-center">
@@ -239,13 +222,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://drive.google.com/file/d/1T6zUEkKLc87O7ccx0NmgjEjyhxLkeGzv/view" target="_blank">by Philio Kotler (2e) <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://drive.google.com/file/d/1T6zUEkKLc87O7ccx0NmgjEjyhxLkeGzv/view" target="_blank">Principles of Marketing(Philio Kotler-2e) <i class="fa-solid fa-link"></i></a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://drive.google.com/file/d/1-bW6XmWtcogT_MjUHq7imPXOZJto43yY/view" target="_blank">by Philio Kotler (14e) <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://drive.google.com/file/d/1-bW6XmWtcogT_MjUHq7imPXOZJto43yY/view" target="_blank">Principles of Marketing(Philio Kotler-14e) <i class="fa-solid fa-link"></i></a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://drive.google.com/file/d/1B9NVe-Ie87z9uNuVELw1QHMoKiJblR0_/view" target="_blank">by Openstax <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://drive.google.com/file/d/1B9NVe-Ie87z9uNuVELw1QHMoKiJblR0_/view" target="_blank">Principles of Marketing(Openstax) <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -256,7 +239,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="https://drive.google.com/drive/folders/1g14MXI7bBBdeEJ-HGZW9L1etLDDnWAN2?usp=share_link">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -284,31 +267,18 @@
       <div>
         <h3>Short Notes</h3>
         <div class="container text-center mb-5">
-          <div class="row">
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
-            <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
-            </div>
+          <div class="col-lg-6 mb-5">
+            <a class="content-link" href="">Unit 1 (Coming Soon)</a>
+          </div>
+          <div class="col-lg-6 mb-5">
+            <a class="content-link" href="">Unit 2 (Coming Soon)</a>
+          </div>
+          <div class="col-lg-6 mb-5">
+            <a class="content-link" href="">Unit 3 (Coming Soon)</a>
+          </div>
+          <div class="col-lg-6 mb-5">
+            <a class="content-link" href="">Unit 4 (Coming Soon)</a>
+          </div>
           </div>
         </div>
       <div>
@@ -329,7 +299,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://www.youtube.com/watch?v=VXTbSqrS1OQ&list=PLiaygP8qeQGUCZnFPYuxdwlDeS2NY6Goa" target="_blank">Open <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://www.youtube.com/playlist?list=PLgEEv7JaX_GJpDXickV2gMdsC5qnAOUpn" target="_blank">YouTube Playlist <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -340,7 +310,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://drive.google.com/file/d/19dE5HMGRCH9QTVNsOEAuRsJIT-jzu3JJ/view" target="_blank">Open <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://drive.google.com/file/d/19dE5HMGRCH9QTVNsOEAuRsJIT-jzu3JJ/view" target="_blank">Horngren's Cost Accounting: A Managerial Emphasis. Pearson. <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -351,7 +321,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Coming Soon</a>
+              <a class="content-link" href="https://drive.google.com/drive/folders/1On6aTBqfXYDa7ix4XX2StQMKTCoqTouW?usp=share_link">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -386,10 +356,10 @@
     <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
       <p>© 2023 Company, Inc. All rights reserved.</p>
       <ul class="list-unstyled d-flex">
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-youtube social-links"></i></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-instagram social-links"></i></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-twitter social-links"></i></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-linkedin social-links"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#footer"><i class="fa-brands fa-youtube social-links inactive"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#footer"><i class="fa-brands fa-instagram social-links inactive"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#footer"><i class="fa-brands fa-twitter social-links inactive"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="https://www.linkedin.com/company/resourciaofficial/" target="_blank"><i class="fa-brands fa-linkedin social-links"></i></a></li>
       </ul>
     </div>
   </footer>
