--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/pages/calendar/" target="_blank">Open <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/pages/calendar/" target="_blank">Principle of MicroEconomics(MIT) <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -206,7 +206,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://www.coursera.org/learn/marketing-management/home/info" target="_blank">Open <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://www.coursera.org/learn/marketing-management/home/info" target="_blank">Coursera <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -336,7 +336,7 @@
         <h5>Courses</h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="#BMS" class="nav-link p-0">BMS</a></li>
-          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-body-secondary">B.Com(coming soon)</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0">B.Com(coming soon)</a></li>
         </ul>
       </div>
 
