--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/pages/calendar/" target="_blank">Principle of MicroEconomics(MIT) <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/video_galleries/lecture-videos/" target="_blank">Principle of MicroEconomics(MIT) <i class="fa-solid fa-link"></i></a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 mb-5">
+              <a class="content-link" href="https://www.youtube.com/playlist?list=PLTjEimbqDkpBL55W6wye1jTcYePjehkT3" target="_blank">Principle of MicroEconomics(YouTube Playlist) <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
