--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" class="h-100" data-bs-theme="auto">
   
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WVD87QGJPN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WVD87QGJPN');
+    </script>
+  
     <meta charset="utf-8">
 
     <!-- title -->
